--- a/api/package.json
+++ b/api/package.json
@@ -4,45 +4,41 @@
   "description": "",
   "main": "build/server.js",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf build/ && tsc",
     "preserve": "npm run build",
-    "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q build/index.js\"",
+    "serve": "concurrently \"tsc --watch\" \"nodemon -q build/index.js\"",
     "prestart": "npm run build",
-    "start": "node dist/index.js"
+    "start": "node build/index.js",
+    "postinstall": "npm run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "chalk": "^4.1.2",
     "config": "^3.3.7",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
+    "joi": "^17.6.0",
+    "module-alias": "^2.2.2",
     "mongoose": "^6.5.1",
-    "nanoid": "^4.0.0",
-    "rimraf": "^3.0.2",
-    "yup": "^0.32.11"
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/body-parser": "^1.19.2",
     "@types/config": "^3.3.0",
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/lodash": "^4.14.182",
     "@types/mongoose": "^5.11.97",
-    "@types/nanoid": "^3.0.0",
-    "@types/node": "^18.6.4",
-    "@types/pino": "^7.0.5",
-    "@types/yup": "^0.29.14",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
-    "pino": "^8.4.0",
-    "pino-pretty": "^8.1.0",
+    "prettier": "2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "_moduleAliases": {
+    "@/config": "build/config/",
+    "@/controllers": "build/controllers/",
+    "@/library": "build/library/",
+    "@/middleware": "build/middleware/",
+    "@/models": "build/models/",
+    "@/routes": "build/routes/"
   }
 }
