[N] Dodano model lekarza oraz rozpoczęto prace nad kontrolerem dla lekarzy, dodano plik pomocniczy do zarządzania dniami przyjęć

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -9,24 +9,12 @@
 		"skipLibCheck": true,
 		"baseUrl": "./source",
 		"paths": {
-			"@/config/*": [
-				"config/*"
-			],
-			"@/controllers/*": [
-				"controllers/*"
-			],
-			"@/library/*": [
-				"library/*"
-			],
-			"@/middleware/*": [
-				"middleware/*"
-			],
-			"@/models/*": [
-				"models/*"
-			],
-			"@/routes/*": [
-				"routes/*"
-			]
+			"@/config/*": ["config/*"],
+			"@/controllers/*": ["controllers/*"],
+			"@/library/*": ["library/*"],
+			"@/middleware/*": ["middleware/*"],
+			"@/models/*": ["models/*"],
+			"@/routes/*": ["routes/*"]
 		}
 	}
 }
