--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node-cron": "^3.0.2",
     "chalk": "^4.1.2",
     "config": "^3.3.7",
     "dotenv": "^16.0.1",
@@ -21,10 +22,12 @@
     "joi": "^17.6.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.5.1",
+    "node-cron": "^3.0.2",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@types/config": "^3.3.0",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "concurrently": "^7.3.0",
