--- a/api/package.json
+++ b/api/package.json
@@ -16,20 +16,29 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/express-session": "^1.17.5",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node-cron": "^3.0.2",
+    "@types/passport": "^1.0.11",
+    "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "config": "^3.3.7",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^6.5.1",
     "node-cron": "^3.0.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "rbac": "^5.0.3",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
