--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Projekt zaliczeniowy Inżynieria oprogramowania.",
   "scripts": {
+    "install": "concurrently \"cd frontend/webportal && npm install\" \"cd api && npm install\"",
     "start": "concurrently \"cd frontend/webportal && npm start\" \"cd api && npm run serve\""
   },
   "repository": {
