--- a/frontend/webportal/package.json
+++ b/frontend/webportal/package.json
@@ -18,10 +18,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=8080 react-scripts start",
-    "build": "PORT=8080 react-scripts build",
-    "test": "PORT=8080 react-scripts test",
-    "eject": "PORT=8080 react-scripts eject"
+    "start": "set PORT=8080 && react-scripts start",
+    "build": "set PORT=8080 && react-scripts build",
+    "test": "set PORT=8080 && react-scripts test",
+    "eject": "set PORT=8080 && react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
