--- a/api/package.json
+++ b/api/package.json
@@ -39,6 +39,7 @@
     "node-cron": "^3.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
     "rbac": "^5.0.3",
     "rimraf": "^3.0.2"
   },
