--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,7 @@
     "preserve": "npm run build",
     "serve": "concurrently \"tsc --watch\" \"nodemon -q build/index.js\"",
     "prestart": "npm run build",
-    "start": "node build/index.js",
-    "postinstall": "npm run build"
+    "start": "node build/index.js"
   },
   "author": "",
   "license": "ISC",
