--- a/frontend/webportal/package.json
+++ b/frontend/webportal/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
