--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^6.5.1",
     "node-cron": "^3.0.2",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "rbac": "^5.0.3",
@@ -46,6 +47,7 @@
     "@types/config": "^3.3.0",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
+    "@types/passport-jwt": "^3.0.8",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
