[N] Dodano obsługę wysyłania maili z numerem rezerwacji

--- a/api/.env.example
+++ b/api/.env.example
@@ -2,3 +2,6 @@ MONGO_USERNAME=user
 MONGO_PASSWORD=<Core-JR_ma_haslo_do_swojej_bazy>
 
 SERVER_PORT=3000
+
+GMAIL_USERNAME=automat.srk@gmail.com
+GMAIL_PASSWORD=<Core-JR_na_haslo_do_konta>
