--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,8 @@
     "module-alias": "^2.2.2",
     "mongoose": "^6.5.1",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.8.0",
+    "nodemailer-express-handlebars": "^6.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -47,6 +49,7 @@
     "@types/config": "^3.3.0",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
     "@types/passport-jwt": "^3.0.8",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
@@ -60,6 +63,7 @@
     "@/library": "build/library/",
     "@/middleware": "build/middleware/",
     "@/models": "build/models/",
-    "@/routes": "build/routes/"
+    "@/routes": "build/routes/",
+    "@/services": "build/services/"
   }
 }
