--- a/frontend/webportal/package.json
+++ b/frontend/webportal/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.4.1",
     "react-dom": "^18.2.0",
+    "react-idle-timer": "^5.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
