--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3"
 services:
   server:
-    build: ./api/
+    image: api-production
     ports:
       - "3000:3000"
     env_file:
       - ./api/.env
   webportal:
-    build: ./frontend/webportal/
+    image: webportal-production
     ports:
-      - "3030:3030"
+      - "3030:80"
     environment:
       - CHOKIDAR_USEPOLLING=true
   database:
