--- a/frontend/webportal/Dockerfile
+++ b/frontend/webportal/Dockerfile
@@ -1,7 +1,11 @@
-FROM node:18-alpine
+FROM node:18-alpine as build
 WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
 EXPOSE 3030
-CMD ["npm", "start"]
+RUN npm run build
+
+FROM nginx:stable-alpine
+COPY --from=build /app/build /usr/share/nginx/html
+COPY /nginx.conf /etc/nginx/conf.d/default.conf
