--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
     "preserve": "npm run build",
     "serve": "concurrently \"tsc --watch\" \"nodemon -q build/index.js\"",
     "prestart": "npm run build",
-    "start": "node build/index.js"
+    "start": "node build/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "@types/node-cron": "^3.0.2",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
@@ -42,19 +43,18 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "rbac": "^5.0.3",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.7.4",
+    "concurrently": "^7.3.0"
   },
   "devDependencies": {
     "@types/config": "^3.3.0",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
-    "@types/nodemailer-express-handlebars": "^4.0.2",
-    "@types/passport-jwt": "^3.0.8",
-    "concurrently": "^7.3.0",
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "ts-node": "^10.9.1"
+   
   },
   "_moduleAliases": {
     "@/config": "build/config/",
